[package]
name = "fonts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.0"
glium = "0.32.1"
memmap2 = "0.5.10"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
walkdir = "2.3.3"
