[package]
name = "fonts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.0"
servo-fontconfig = "0.5"
once_cell = "1.5"
freetype = "0.7.0"
glium = "^0.31"
memmap2 = "0.5.10"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
